dropp innlogging i dev, bruk templating i deploy workflow

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -30,10 +30,11 @@ jobs:
           team: helsearbeidsgiver
           identity_provider: ${{ secrets.NAIS_WORKLOAD_IDENTITY_PROVIDER }} # Provided as Organization Secret
           project_id: ${{ vars.NAIS_MANAGEMENT_PROJECT_ID }} # Provided as Organization Variable
-      - name: Deploy to NAIS
+      - name: Deploy to NAIS DEV
         uses: nais/deploy/actions/deploy@v2
         env:
           CLUSTER: dev-gcp
           RESOURCE: .nais/app.yaml # This points to the file we created in the previous step
           VAR: image=${{ steps.docker-build-push.outputs.image }}
+          VARS: .nais/dev.yaml
           TELEMETRY: ${{ steps.docker-build-push.outputs.telemetry }}
