--- a/.nais/app.yaml
+++ b/.nais/app.yaml
@@ -3,6 +3,8 @@ kind: Application
 metadata:
   name: hag-admin
   namespace: helsearbeidsgiver
+  annotations:
+    texas.nais.io/enabled: "true"
 spec:
   azure:
     application:
