send secureLogs til elastic

--- a/.nais/app.yaml
+++ b/.nais/app.yaml
@@ -43,5 +43,9 @@ spec:
     requests:
       cpu: 50m
       memory: 128Mi
+  observability:
+    logging:
+      destinations:
+        - id: secure_logs
   secureLogs:
     enabled: true
