--- a/.nais/prod.yaml
+++ b/.nais/prod.yaml
@@ -2,5 +2,7 @@ login: true
 env:
   - name: ARBEIDSGIVER_NOTIFIKASJON_SCOPE
     value: "api://prod-gcp.fager.notifikasjon-produsent-api/.default"
+  - name: SAK_UTGAATT_URL
+    value: "https://arbeidsgiver.nav.no/im-dialog/utgatt"
 ingresses:
   - https://hag-admin.intern.nav.no
