--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,6 @@
 kotlin.code.style=official
 kotlin_version=2.2.20
-logback_version=1.5.8
+ktor_version=3.3.1
+logback_version=1.5.19
 mockk_version=1.13.13
 arbeidsgiver_notifikasjon_klient_version=3.6.0
