--- a/.nais/app.yaml
+++ b/.nais/app.yaml
@@ -26,6 +26,8 @@ spec:
   env:
     - name: ARBEIDSGIVER_NOTIFIKASJON_API_URL
       value: "http://notifikasjon-produsent-api.fager/api/graphql"
+    - name: JDK_JAVA_OPTIONS
+      value: -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/tmp
     {{#each env as |var|}}
     - name: {{ var.name }}
       value: "{{ var.value }}"
