enabler metrics-endepunkt

--- a/.nais/app.yaml
+++ b/.nais/app.yaml
@@ -45,6 +45,9 @@ spec:
     requests:
       cpu: 50m
       memory: 128Mi
+  prometheus:
+    enabled: true
+    path: /metrics
   observability:
     logging:
       destinations:
