--- a/.nais/app.yaml
+++ b/.nais/app.yaml
@@ -30,7 +30,7 @@ spec:
     - name: ARBEIDSGIVER_NOTIFIKASJON_API_URL
       value: "http://notifikasjon-produsent-api.fager/api/graphql"
     - name: JDK_JAVA_OPTIONS
-      value: -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/tmp
+      value: -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/tmp -Xmx32M
     {{#each env as |var|}}
     - name: {{ var.name }}
       value: "{{ var.value }}"
@@ -45,8 +45,8 @@ spec:
     max: 1
     min: 1
   resources:
-    requests:
-      cpu: 50m
+    limits:
+      cpu: 250m
       memory: 64Mi
   observability:
     logging:
