--- a/.nais/app.yaml
+++ b/.nais/app.yaml
@@ -48,6 +48,9 @@ spec:
     limits:
       cpu: 250m
       memory: 64Mi
+    requests:
+      cpu: 50m
+      memory: 64Mi
   observability:
     logging:
       destinations:
