--- a/.nais/app.yaml
+++ b/.nais/app.yaml
@@ -30,7 +30,7 @@ spec:
     - name: ARBEIDSGIVER_NOTIFIKASJON_API_URL
       value: "http://notifikasjon-produsent-api.fager/api/graphql"
     - name: JDK_JAVA_OPTIONS
-      value: -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/tmp
+      value: -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/tmp -Xmx96M
     {{#each env as |var|}}
     - name: {{ var.name }}
       value: "{{ var.value }}"
@@ -46,7 +46,8 @@ spec:
     min: 1
   resources:
     limits:
-      cpu: 250m
+      memory: 256Mi
+    request:
       memory: 256Mi
   observability:
     logging:
