--- a/.nais/app.yaml
+++ b/.nais/app.yaml
@@ -47,7 +47,7 @@ spec:
   resources:
     limits:
       memory: 256Mi
-    request:
+    requests:
       memory: 256Mi
   observability:
     logging:
